--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
     if (window.location.protocol !== "https:"){
       window.location.protocol = "https";
     }
+    
+    // Testing
+    console.log("%cColor 1 and %cColor 2", "background: #222; color: #bada55", "background: #222; color: #ffaaaa");
   </script>
 
 </body>
