--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     
     // Testing
     console.log("%cColor 1 and %cColor 2", "background: #222; color: #bada55", "background: #222; color: #ffaaaa");
+    console.log("String: %s and decimal: %d", "this is sparta", 111);
   </script>
 
 </body>
