--- a/src/content/peerconnection/pc1/index.html
+++ b/src/content/peerconnection/pc1/index.html
@@ -33,7 +33,7 @@
 
   <div id="container">
 
-    <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>Peer connection</span></h1>
+    <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>Peer connection (with TestRTC api)</span></h1>
 
     <video id="localVideo" autoplay muted></video>
     <video id="remoteVideo" autoplay></video>
@@ -55,8 +55,15 @@
 
   <script src="../../../js/adapter.js"></script>
   <script src="../../../js/common.js"></script>
-  <script src="js/main.js"></script>
 
-  <script src="../../../js/lib/ga.js"></script>
+  <script type="text/javascript" src="http://localhost:3100/testRTC-api.js"></script>
+  <script type="text/javascript">
+    TestRTC.init({
+      apiKey: 'DEV',
+      debug: true
+    });
+  </script>
+  
+  <script src="js/main.js"></script>
 </body>
 </html>
